@@ -7,6 +7,7 @@ BIN = $(DESTDIR)/usr/bin
 ETC = $(DESTDIR)/etc
 LIBEXEC = $(DESTDIR)/usr/libexec/genie
 ENVGEN = $(DESTDIR)/usr/lib/systemd/system-environment-generators
+USRENVGEN = $(DESTDIR)/usr/lib/systemd/user-environment-generators
 MAN8 = $(DESTDIR)/usr/share/man/man8
 DOCS = $(DESTDIR)/usr/share/doc/genie
 
@@ -21,9 +22,8 @@ build:
 #
 install:
 	install -Dm 4755 -o root "genie/bin/Release/net5.0/linux-x64/publish/genie" -t "$(LIBEXEC)"
-	install -Dm 0755 -o root "scripts/dumpwslenv.sh" -t "$(LIBEXEC)"
 	install -Dm 0755 -o root "scripts/runinwsl.sh" -t "$(LIBEXEC)"
-	install -Dm 0755 -o root "scripts/10-genie-envar.sh" -t "$(ENVGEN)"
+	install -Dm 0755 -o root "scripts/10-genie-envar.sh" -t "$(LIBEXEC)"
 	mkdir -p "$(BIN)"
 	install -Dm 0644 -o root "conf/genie.ini" -t "$(ETC)"
 
@@ -42,13 +42,14 @@ build-local:
 install-local:
 	# Local install of the above
 	install -Dm 4755 -o root "genie/bin/Release/net5.0/linux-x64/publish/genie" -t "/usr/local/libexec/genie"
-	install -Dm 0755 -o root "scripts/dumpwslenv.sh" -t "/usr/local/libexec/genie"
 	install -Dm 0755 -o root "scripts/runinwsl.sh" -t "/usr/local/libexec/genie"
 	# Environment generator has to go in the same place
-	install -Dm 0755 -o root "scripts/10-genie-envar.sh" -t "$(ENVGEN)"
+	install -Dm 0755 -o root "scripts/10-genie-envar.sh" -t "/usr/local/libexec/genie"
 	mkdir -p "$(BIN)"
 	# Create symlink manually
 	ln -s /usr/local/libexec/genie/genie /usr/local/bin/genie
+	ln -s /usr/local/libexec/genie/10-genie-envar.sh $(ENVGEN)/10-genie-envar.sh
+	ln -s /usr/local/libexec/genie/10-genie-envar.sh $(ENVGEN)/10-genie-envar.sh
 	# Config file also to the same place
 	install -Dm 0644 -o root "conf/genie.ini" -t "$(ETC)"
 	# These are handled elsewhere by debuild, so we need to do them manually.
