@@ -3,4 +3,4 @@ secure-path=/lib/systemd:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin
 unshare=/usr/bin/unshare
 update-hostname=true
 clone-path=false
-
+clone-env=WSL_DISTRO_NAME,WSL_INTEROP,WSLENV
