@@ -2,7 +2,9 @@ systemd-genie (1.30) unstable; urgency=medium
 
         * Changed to precompile .NET code.
         * Added appending of outside-bottle path to inside-bottle path
-          (with dedupe).
+          (with dedupe) as option.
+        * Moved saving of environment variables into binary, with
+          configuration option in genie.ini.
 
  -- Alistair Young <avatar@arkane-systems.net>  Sat, 26 Dec 2020 13:47:00 -0500
 
